# auto-video-edit

./: .env.example  .gitignore  .gitmodules  =  ARCHITECTURE.md  Arch_diagram .canvas  Archs.md  LICENSE  README.md  ROADMAP.md  SKILL_IMPROVEMENTS.md  SPEC.md  test_fcpxml_export.py  test_full_workflow.py
.cops/: config.json
apps/backend/: CLI_INTERFACE.md  Dockerfile  PROVIDER_RUNTIME_SPEC.md  README.md  REEXPORT_SPLIT_PLAN.md  REVIEW_DATA_ALIGNMENT_PLAN.md  TESTING.md  TEST_API_SPECS.md  TEST_DATA_GUIDE.md  WORK_IN_PROGRESS.md  pyproject.toml
apps/backend/manual-fixtures/: README.md
apps/backend/manual-fixtures/historical/20260207_192336/: EVAL_REPORT.md
apps/backend/manual-fixtures/live/: README.md
apps/backend/manual-fixtures/snapshots/two-pass/: C1718_two_pass_disabled.srt
apps/backend/manual-fixtures/text/: c1718_compressed.storyline.json  e2e_eval_comparison.json  e2e_source.storyline.json
apps/backend/scripts/: test_chalna_pipeline.py  test_silence_export.py
apps/backend/src/avid/: __init__.py  cli.py  config.py  errors.py  main.py  monitoring.py  provider_runtime.py
apps/backend/src/avid/api/: __init__.py  deps.py  schemas.py
apps/backend/tests/: __init__.py  test_aggregator.py  test_audio_sync_drift.py  test_edit_decision_version.py  test_fcpxml_connected_extra.py  test_fcpxml_multicam.py  test_junction_audit.py  test_media_service.py  test_media_timecode_proxy.py  test_models.py  test_parallel_chunks.py  test_podcast_cut_bridge_prompt.py  test_podcast_prompt_profiles.py  test_review_boundaries.py  test_speaker_metadata.py  test_srt_parser.py
(+147 files in other folders)
