[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avid"
version = "0.1.0"
description = "Auto Video Edit - Automated video editing pipeline"
requires-python = ">=3.11"
license = "CC-BY-NC-SA-4.0"
authors = [
    { name = "Auto Video Edit Team" }
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "streamlit>=1.30.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
whisper = [
    "openai-whisper>=20231117",
]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
avid = "avid.main:main"
avid-cli = "avid.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/avid"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
